
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-intel-rag"
version = "0.1.0"
description = "Ground answers on internal documents with lightweight retrieval, grounded citations, and fast QA demos."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
